# CircuitPython-mocks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  test.yml
circuitpython_mocks/: __init__.py  _mixins.py  board.py  fixtures.py
circuitpython_mocks/busio/: __init__.py  operations.py
circuitpython_mocks/digitalio/: __init__.py  operations.py
docs/: board.rst  busio.rst  conf.py  digitalio.rst  index.rst  requirements.txt
docs/busio/: i2c.rst  index.rst  spi.rst  uart.rst
tests/: requirements.txt  test_dio.py  test_dio_fixture.py  test_i2c.py  test_i2c_fixture.py  test_spi.py  test_spi_fixture.py  test_uart.py  test_uart_fixture.py
